<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_900"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/movie_preview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="3:4"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic"
                android:contentDescription="@string/movie_preview"/>

            <View
                android:id="@+id/shadow"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/detail_image_shade"
                android:backgroundTint="@color/black_900"
                app:layout_constraintBottom_toBottomOf="@id/movie_preview" />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:layout_constraintTop_toBottomOf="@id/movie_preview"
                tools:layout_editor_absoluteX="16dp"
                tools:text="Disney's Aladdin" />

            <Button
                android:id="@+id/play_trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:enabled="false"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:text="@string/play_trailer"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:icon="@drawable/play_arrow_24"
                app:iconGravity="textStart"
                app:iconSize="28dp"
                app:iconTint="@color/white"
                app:layout_constraintTop_toBottomOf="@id/movie_title"
                tools:layout_editor_absoluteX="16dp" />

            <io.github.giangpham96.expandable_textview.ExpandableTextView
                android:id="@+id/movie_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="18dp"
                android:lineSpacingMultiplier="1.1"
                android:textAlignment="center"
                android:textColor="@color/semitransparent_65"
                android:textSize="14sp"
                app:expandAction="@string/expand_action"
                app:expandActionColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/play_trailer"
                app:limitedMaxLines="3"
                app:originalText="@tools:sample/lorem/random"
                tools:layout_editor_absoluteX="24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/lbl_movie_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/inter"
                android:text="@string/lbl_movie_genre"
                android:textColor="@color/semitransparent_65"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movie_description" />

            <TextView
                android:id="@+id/movie_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:ellipsize="end"
                android:fontFamily="@font/inter"
                android:lines="1"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_movie_genre"
                tools:text="@tools:sample/lorem/random" />

            <TextView
                android:id="@+id/lbl_movie_release_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/inter"
                android:text="@string/lbl_movie_release_date"
                android:textColor="@color/semitransparent_65"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movie_genre" />

            <TextView
                android:id="@+id/movie_release_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:ellipsize="end"
                android:fontFamily="@font/inter"
                android:lines="1"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_movie_release_date"
                tools:text="@tools:sample/lorem/random" />

            <TextView
                android:id="@+id/lbl_movie_actors"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/inter"
                android:text="@string/lbl_movie_actors"
                android:textColor="@color/semitransparent_65"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movie_release_date" />

            <TextView
                android:id="@+id/lbl_movie_imdb_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/inter"
                android:text="@string/lbl_movie_imdb_rating"
                android:textColor="@color/semitransparent_65"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/movie_description" />

            <TextView
                android:id="@+id/movie_imdb_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:ellipsize="end"
                android:fontFamily="@font/inter"
                android:lines="1"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/lbl_movie_imdb_rating"
                tools:text="@tools:sample/lorem/random" />

            <TextView
                android:id="@+id/lbl_movie_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/inter"
                android:text="@string/lbl_movie_country"
                android:textColor="@color/semitransparent_65"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/movie_imdb_rating" />

            <TextView
                android:id="@+id/movie_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:ellipsize="end"
                android:fontFamily="@font/inter"
                android:lines="1"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/lbl_movie_country"
                tools:text="@tools:sample/lorem/random" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/movie_actors_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="14dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/lbl_movie_actors"
                tools:itemCount="6"
                tools:listitem="@layout/item_actors" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="14dp"
                app:layout_constraintTop_toBottomOf="@id/movie_actors_list" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/error_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="error_text, try_again"
            tools:visibility="gone" />

        <Space
            android:id="@+id/top_spacer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/search_background"
            android:scaleX="0.75"
            android:scaleY="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_spacer"
            app:srcCompat="@drawable/ic_arrow_back_24"
            app:tint="@color/white"
            android:contentDescription="@string/navigate_back"/>

        <CheckBox
            android:id="@+id/is_favourite"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/search_background"
            android:scaleX="0.75"
            android:scaleY="0.75"
            app:buttonIcon="@drawable/bookmark_selector"
            app:buttonIconTint="@color/white"
            app:buttonTint="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_spacer" />


        <TextView
            android:id="@+id/error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:includeFontPadding="false"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/try_again"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:layout_editor_absoluteX="16dp"
            tools:text="@tools:sample/lorem" />

        <Button
            android:id="@+id/try_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/red_700"
            android:fontFamily="@font/poppins_regular"
            android:includeFontPadding="false"
            android:text="@string/try_again"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/error_text"
            tools:layout_editor_absoluteX="16dp" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:indeterminateTint="@color/red_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>